Django-and-app-engine-patch-ified Dave's initial design work.

--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}Oops, something went wrong{% endblock %}
-
-{% block content %}
-Oops - something went wrong while handling your request.
+{% block body %}
+<body>
+<h1>Oops - something went wrong while handling your request.</h1>
+</body>
 {% endblock %}
