--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}Oops, that doesn't exist{% endblock %}
-
-{% block content %}
-Oops - you appear to have requested a resource which doesn't exist.
+{% block body %}
+<body>
+<h1>Oops - you appear to have requested a resource which doesn't exist.</h1>
+</body>
 {% endblock %}
