--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,9 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>{% block title %}{% endblock %} - ping pong app</title>
+  <title>{% block title %}{% endblock %}PingPongApp</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
   {% block css %}
     <link rel="stylesheet" type="text/css"  media="screen, projection" href="{{ MEDIA_URL }}combined-{% if LANGUAGE_BIDI %}rtl{% else %}ltr{% endif %}.css" />
     <link rel="stylesheet" type="text/css"  media="print" href="{{ MEDIA_URL }}combined-print-{% if LANGUAGE_BIDI %}rtl{% else %}ltr{% endif %}.css" />
@@ -10,18 +12,10 @@
       <link rel="stylesheet" type="text/css" media="screen, projection" href="{{ MEDIA_URL }}ie.css">
     <![endif]-->
   {% endblock %}
-
   {% block js %}
     <script type="text/javascript" src="{{ MEDIA_URL }}combined-{{ LANGUAGE_CODE }}.js"></script>
   {% endblock %}
-
-  {% block extra-head %}{% endblock %}
 </head>
-<body>
-  <div id="container">
-    <h1>ping pong app 0.1</h1>
-    {% block content %}
-    {% endblock %}
-  </div>
-</body>
+{% block body %}
+{% endblock %}
 </html>
