--- a/templates/main.html
+++ b/templates/main.html
@@ -1,15 +1,81 @@
 {% extends 'base.html' %}
-{% block title %}welcome!{% endblock %}
 
-{% block content %}
-<div>This is where the magic begins...</div>
-<div>
-{% if user.is_authenticated %}
-  Welcome, {{ user.username }}!
-  <a href="{% url django.contrib.auth.views.logout %}">Logout</a>
-{% else %}
-  <a href="{% url django.contrib.auth.views.login %}">Login</a>
-  <a href="{% url registration.views.register %}">Register</a>
-{% endif %}
-</div>
+{% block body %}
+<body>
+	<!-- // NAV ////////////////////////////////////////////// -->
+	<div class="nav">
+		<div class="core_container">
+			<span class="core_right"><a href="" class="nav_add core_radius8">Add score<span></span></a></span>
+			<a href="" class="nav_singles nav_down core_radius8">Singles<span></span></a>
+			<a href="" class="nav_doubles nav_up core_radius8">Doubles<span></span></a>
+			<div class="core_clear"></div>
+		</div>
+	</div>
+	
+	<!-- // SINGLES RANKINGS ///////////////////////////////// -->
+	<div id="singles" class="core_rankings_div core_radius8">
+		<ul class="core_top_three core_radius8">
+			<li class="top_players core_radius8"><span class="points">156</span><span class="rank core_radius8">1</span><span class="name">Dmart</span><div class="core_clear"></div></li>
+			<li class="top_players core_radius8"><span class="points">142</span><div class="core_last core_radius8">+3</div><span class="rank core_radius8">2</span><span class="name">James</span><div class="core_clear"></div></li>
+			<li class="top_players core_radius8"><span class="points">139</span><div class="core_last core_loss core_radius8">-3</div><span class="rank core_radius8">3</span><span class="name">Phil</span><div class="core_clear"></div></li>
+		</ul>
+		<div class="core_the_rest"><span class="points">131</span><div class="rank">4.</div><span class="name">DavidG</span><div class="core_clear"></div></div>
+		<div class="core_the_rest"><span class="points">129</span><div class="core_last core_loss core_radius8">-3</div><div class="rank">5.</div><span class="name">Mat</span><div class="core_clear"></div></div>
+		<div class="core_the_rest"><span class="points">113</span><div class="rank">6.</div><span class="name">Jason</span><div class="core_clear"></div></div>
+		<div class="core_the_rest"><span class="points">106</span><div class="core_last core_radius8">+3</div><div class="rank">7.</div><span class="name">Ben</span><div class="core_clear"></div></div>
+		<div class="core_the_rest"><span class="points">101</span><div class="rank">8.</div><span class="name">Ken</span><div class="core_clear"></div></div>
+		<div class="core_the_rest"><span class="points">98</span><div class="rank">9.</div><span class="name">DavidH</span><div class="core_clear"></div></div>
+		<div class="core_clear"></div>
+	</div>
+	
+	<!-- // DOUBLES RANKINGS ///////////////////////////////// -->
+	<div id="doubles" class="core_rankings_div core_radius8" style="display: none;">
+		<ul class="core_top_three core_radius8">
+			<li class="top_players core_radius8"><span class="points">156</span><div class="core_last core_radius8">+5</div><span class="rank core_radius8">1</span><span class="name">James</span><div class="core_clear"></div></li>
+			<li class="top_players core_radius8"><span class="points">142</span><span class="rank core_radius8">2</span><span class="name">DaveM</span><div class="core_clear"></div></li>
+			<li class="top_players core_radius8"><span class="points">139</span><span class="rank core_radius8">3</span><span class="name">Phil</span><div class="core_clear"></div></li>
+		</ul>
+		<div class="core_the_rest"><span class="points">131</span><div class="core_last core_radius8">+5</div><div class="rank">4.</div><span class="name">DavidG</span><div class="core_clear"></div></div>
+		<div class="core_the_rest"><span class="points">129</span><div class="rank">5.</div><span class="name">Mat</span><div class="core_clear"></div></div>
+		<div class="core_the_rest"><span class="points">113</span><div class="core_last core_loss core_radius8">-5</div><div class="rank">6.</div><span class="name">Jason</span><div class="core_clear"></div></div>
+		<div class="core_the_rest"><span class="points">106</span><div class="core_last core_loss core_radius8">-5</div><div class="rank">7.</div><span class="name">Ben</span><div class="core_clear"></div></div>
+		<div class="core_the_rest"><span class="points">101</span><div class="rank">8.</div><span class="name">Ken</span><div class="core_clear"></div></div>
+		<div class="core_the_rest"><span class="points">98</span><div class="rank">9.</div><span class="name">DavidH</span><div class="core_clear"></div></div>
+		<div class="core_clear"></div>
+	</div>
+	
+	<!-- // FOOTER ///////////////////////////////// -->
+	<div class="footer">
+		<div class="links">
+			<a href="#">Settings</a> <a href="#">Logout</a> 
+		</div>
+		<a href=""><img src="images/footer_logo.gif" width="230" height="42" alt="PingPongApp.com" /></a>
+	</div>
+	<script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.3.2.min.js" type="text/javascript"></script>
+	<script>
+		$(document).ready(function () {
+			$(document).ready(function () {
+				determineLayout();
+			});
+			$(window).resize(function () {
+				determineLayout();
+			});
+			$('.nav_singles').bind('click', function() {
+				$(".nav_singles").removeClass("nav_up").addClass("nav_down");
+				$(".nav_doubles").removeClass("nav_down").addClass("nav_up");
+				$("#doubles").hide();
+				$("#singles").fadeIn("slow");
+				return false;
+			});
+			$('.nav_doubles').bind('click', function() {
+				$(".nav_doubles").removeClass("nav_up").addClass("nav_down");
+				$(".nav_singles").removeClass("nav_down").addClass("nav_up");
+				$("#singles").hide();
+				$("#doubles").fadeIn("slow");
+				return false;
+			});
+		});
+	</script>
+	<script type="text/javascript" src="core.js"></script>
+</body>
 {% endblock %}
