Re-structured the project so that everything related to the pingpong app is contained in the pingpong sub-directory. Nifty use of urlsauto.py.

--- a/pingpong/templates/index.html
+++ b/pingpong/templates/index.html
@@ -11,13 +11,13 @@
 				<div class="login"><a href="">Login</a></div>
 				<div class="core_clear"></div>
 			</span>
-			<img src="{{ MEDIA_URL }}global/images/home_logo.gif" width="219" height="52" alt="Ping Pong App - Simple tournament software" />
+			<img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="219" height="52" alt="Ping Pong App - Simple tournament software" />
 		</div>
 	</div>
 	<div class="container">
-		<a href="" class="core_right"><img src="{{ MEDIA_URL }}global/images/home_screenshot.jpg" width="459" height="438" /></a>
+		<a href="" class="core_right"><img src="{{ MEDIA_URL }}pingpong/images/home_screenshot.jpg" width="459" height="438" /></a>
 		<div class="copy">
-			<div class="intro">Track all of your singles and doubles scores and know for sure whos the best in the office.</div>
+			<div class="intro">Track all of your singles and doubles scores and know for sure who's the best in the office.</div>
 			<div class="feature unlimited">
 				<h2>Unlimited players &amp; games</h2>
 				<p>You can add unlimited players and list unlimited games for just $8.95/mo.  Cancel anytime and take your data with you.</p>
@@ -34,7 +34,7 @@
 		<div class="core_clear"></div>
 	</div>
 	<div class="container" style="padding-top: 0;">
-		<a href="" class="core_right"><img src="{{ MEDIA_URL }}global/images/home_try_it_free.jpg" width="239" height="45" /></a>
+		<a href="" class="core_right"><img src="{{ MEDIA_URL }}pingpong/images/home_try_it_free.jpg" width="239" height="45" /></a>
 		<div class="core_clear"></div>
 		<span class="cancel core_right">Then $8.95/ mo. Cancel anytime - no hassle.</span>
 	</div>
