--- a/pingpong/templates/main.html
+++ b/pingpong/templates/main.html
@@ -49,10 +49,9 @@
 		<div class="links">
 			<a href="#">Settings</a> <a href="#">Logout</a> 
 		</div>
-		<a href=""><img src="images/footer_logo.gif" width="230" height="42" alt="PingPongApp.com" /></a>
+		<a href=""><img src="{{ MEDIA_URL }}global/images/footer_logo.gif" width="230" height="42" alt="PingPongApp.com" /></a>
 	</div>
-	<script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.3.2.min.js" type="text/javascript"></script>
-	<script>
+	<script type="text/javascript">
 		$(document).ready(function () {
 			$(document).ready(function () {
 				determineLayout();
@@ -76,6 +75,5 @@
 			});
 		});
 	</script>
-	<script type="text/javascript" src="core.js"></script>
 </body>
 {% endblock %}
