--- a/pingpong/templates/main.html
+++ b/pingpong/templates/main.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
-<body>
+{% block content %}
 	<!-- // NAV ////////////////////////////////////////////// -->
 	<div class="nav">
 		<div class="core_container">
@@ -75,5 +74,4 @@
 			});
 		});
 	</script>
-</body>
 {% endblock %}
