--- a/pingpong/templates/base.html
+++ b/pingpong/templates/base.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="{{ MEDIA_URL }}combined-{{ LANGUAGE_CODE }}.js"></script>
   {% endblock %}
 </head>
-{% block body %}
+<body{% block body-atts%}{% endblock %}>
+{% block content %}
 {% endblock %}
 </html>
