--- a/pingpong/media/core.css
+++ b/pingpong/media/core.css
@@ -14,8 +14,8 @@ input[type=text]:focus, input[type=password]:focus { outline: none; border: 2px 
 input.fat { padding: 3px 5px; margin: 0 10px 4px 0; -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px }
 input.med { width: 200px; }
 input.required { border: 1px solid #993300; }
-input.small { width: 50px; }
-label { color: #333; display: block; font-weight: bold; margin: 0 0 5px 0; }
+input.small { width: 70px; }
+/* label { color: #333; display: block; font-weight: bold; margin: 0 0 5px 0; } */
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: normal; }
 li { list-style: none; }
 td { vertical-align: top; }
