--- a/pingpong/media/core.css
+++ b/pingpong/media/core.css
@@ -5,7 +5,7 @@ html { height: 100%; }
 html.core_fixed_nav { overflow: hidden; }
 body, div, ul, ol, li, h1, h2, h3, h4, h5, h6, form, fieldset, legend, input, button, textarea, p, blockquote, th, td { margin: 0; padding: 0; }
 body { background: url(images/core_bg.jpg) #363636; font-family: Georgia, Arial, Helvetica, sans-serif; font-size:12px; color: #FFF; line-height:1.5em; height: 100%; }
-a { color: #006699; }
+a { color: #FFF; }
 a:hover { text-decoration: none; } 
 th { font-style: inherit; font-weight: inherit; }
 fieldset, img { border: 0; }
@@ -14,7 +14,6 @@ input[type=text]:focus, input[type=password]:focus { outline: none; border: 2px 
 input.fat { padding: 3px 5px; margin: 0 10px 4px 0; -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px }
 input.med { width: 200px; }
 input.required { border: 1px solid #993300; }
-input.small { width: 70px; }
 /* label { color: #333; display: block; font-weight: bold; margin: 0 0 5px 0; } */
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: normal; }
 li { list-style: none; }
@@ -87,13 +86,10 @@ body#home .copy { width: 314px; float: left; line-height: 26px; margin-top: -4px
 body#home .feature { margin-top: 33px; }
 body#home .hosted { background: url(images/home_icon_hosted.jpg) no-repeat; padding-left: 80px; }
 body#home .intro { font-size: 16px; }
-body#home .login { float: right; margin: 17px 19px 0 0; }
-body#home .login a { color: #888; border-right: 1px solid #888; padding-right: 17px; font-family: Helvetica, Arial, sans-serif; }
+body#home .login { float: right; margin-top: -4px; }
+body#home .login .small { font-size: 13px; padding: 4px; width: 85px; margin-right: 3px; }
 body#home .logo { margin: 0 auto; width: 812px; padding: 35px 0; }
-body#home .signup { border: 1px solid #313131; font-size: 20px; font-weight: bold; outline-style: none; outline-width: 0; padding: 10px 15px; margin: 20px 10px 0 0; text-decoration: none; margin-right: 0 !important; position: relative; text-shadow: 1px 1px 3px #026788; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#03AFE9), to(#027EA8)); background-image: -moz-linear-gradient(0% 100% 90deg,#027EA8, #03AFE9); color: #FFF; }
-body#home .signup:hover { border: 1px solid #039FD4; padding: 8px 14px 9qpx 14px !important; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#027EA8), to(#03AFE9)) !important; background-image: -moz-linear-gradient(0% 100% 90deg,#03AFE9, #027EA8) !important;   }
-body#home .signup span { display:block; position:absolute; left:12px; top:7px; z-index:1; width:109px; height:32px;  margin:0; padding:0; background:url("images/home_signup.jpg") top left no-repeat; }
-body#home .signup:hover span { background:url("images/home_signup_up.jpg") top left no-repeat; }
+body#home .signup { color: #888; margin: 0 0 8px 0; }
 body#home .signup_box { float: right; margin-top: 17px; }
 body#home .top { background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#3B3B3B), to(#141414)); background-image: -moz-linear-gradient(0% 100% 90deg,#141414, #3b3b3b); }
 body#home .trial { background: url(images/home_icon_trial.jpg) no-repeat; padding-left: 80px; }
