--- a/pingpong/templates/index.html
+++ b/pingpong/templates/index.html
@@ -9,17 +9,16 @@
   <div class="top">
   	<div class="logo">
   		<span class="core_right">
-  			<!--<div class="signup_box"><a href="" class="btn_signup core_radius8">Signup<span></span></a></div>-->
-  			<div class="login">
-  			  <form action="{% url pingpong.views.login %}" method="post">
-    				<label for="username">Username</label>
-    				<input type="text" name="username" class="small" {% if previous_username %}value="{{ previous_username }}"{% endif %} />
-    				<label for="password">Password</label>
-    				<input type="password" name="password" class="small" />
-    				<button style="padding: 5px;">Login</button>
+			<div class="login">
+  			  <div class="signup"><a href="">Signup</a></div>
+			  <form action="{% url pingpong.views.login %}" method="post">
+    				<input type="image" src="{{ MEDIA_URL }}pingpong/images/btn_home_login.jpg" height="28" width="55" tabindex="3" class="core_right" />
+					<input type="password" id="loginPassword" onfocus="loginClear();" onblur="loginFormValue();" name="password" tabindex="2" class="small core_right"  />
+					<input type="text" id="loginUsername" onfocus="loginClear('username');" onblur="loginFormValue();" name="username" tabindex="1" class="small core_right" {% if previous_username %}value="{{ previous_username }}"{% endif %} />
   			  </form>
   			  {% if login_error %}<div id="login_error">{{ login_error }}</div>{% endif %}
   			</div>
+			
   			<div class="core_clear"></div>
   		</span>
   		<img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="219" height="52" alt="Ping Pong App - Simple tournament software" />
@@ -49,5 +48,9 @@
   	<div class="core_clear"></div>
   	<span class="cancel core_right">Then $8.95/ mo. Cancel anytime - no hassle.</span>
   </div>
-  <script type="text/javascript">var baseUrl = "";</script>
+  <script type="text/javascript">
+    var baseUrl = "";
+	loginFormValue();
+	$("#loginUsername").focus();
+  </script>
 {% endblock %}
