--- a/pingpong/templates/index.html
+++ b/pingpong/templates/index.html
@@ -48,6 +48,7 @@
   	<div class="core_clear"></div>
   	<span class="cancel core_right">Then $8.95/ mo. Cancel anytime - no hassle.</span>
   </div>
+  <script src="{{ MEDIA_URL }}pingpong/home.js" type="text/javascript"></script>
   <script type="text/javascript">
     var baseUrl = "";
 	loginFormValue();
