--- a/pingpong/templates/main.html
+++ b/pingpong/templates/main.html
@@ -50,28 +50,10 @@
 		</div>
 		<a href=""><img src="{{ MEDIA_URL }}pingpong/images/footer_logo.gif" width="230" height="42" alt="PingPongApp.com" /></a>
 	</div>
+	<script src="{{ MEDIA_URL }}pingpong/init.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		$(document).ready(function () {
-			$(document).ready(function () {
-				determineLayout();
-			});
-			$(window).resize(function () {
-				determineLayout();
-			});
-			$('.nav_singles').bind('click', function() {
-				$(".nav_singles").removeClass("nav_up").addClass("nav_down");
-				$(".nav_doubles").removeClass("nav_down").addClass("nav_up");
-				$("#doubles").hide();
-				$("#singles").fadeIn("slow");
-				return false;
-			});
-			$('.nav_doubles').bind('click', function() {
-				$(".nav_doubles").removeClass("nav_up").addClass("nav_down");
-				$(".nav_singles").removeClass("nav_down").addClass("nav_up");
-				$("#singles").hide();
-				$("#doubles").fadeIn("slow");
-				return false;
-			});
+			start();
 		});
 	</script>
 {% endblock %}
