front-end code for add scores popup

--- a/pingpong/templates/main.html
+++ b/pingpong/templates/main.html
@@ -4,7 +4,7 @@
 	<!-- // NAV ////////////////////////////////////////////// -->
 	<div class="nav">
 		<div class="core_container">
-			<span class="core_right"><a href="" class="nav_add core_radius8">Add score<span></span></a></span>
+			<span class="core_right"><a href="" onclick="showPopup('add', 'add.html', ''); return false;" class="nav_add core_radius8">Add score<span></span></a></span>
 			<a href="" class="nav_singles nav_down core_radius8">Singles<span></span></a>
 			<a href="" class="nav_doubles nav_up core_radius8">Doubles<span></span></a>
 			<div class="core_clear"></div>
