--- a/pingpong/media/core.css
+++ b/pingpong/media/core.css
@@ -19,6 +19,21 @@ h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: normal; }
 li { list-style: none; }
 td { vertical-align: top; }
 /* =========================================
+    ADD SCORES POPUP
+   ========================================= */
+.add_enter_scores { margin: 23px auto 0 auto; text-align: center; width: 300px; }
+.add_enter_scores img { float: left; margin-right: 10px; }
+.add_enter_scores span { float: left; margin-top: 12px; color: #999; }
+.add_enter_scores span a, .add_enter_scores span a:hover { color: #999; }
+.add_header { margin-bottom: 13px; }
+.add_player { float: left; padding: 5px 7px; cursor: pointer; font-size: 11px; margin: 0 11px 6px 0; font-weight: bold; width: 105px; text-align: left; border: 1px solid #DFDCD9; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFF), to(#F1F0ED)); background-image: -moz-linear-gradient(0% 100% 90deg,#F1F0ED, #FFF); -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px; }
+.add_player.selected, .add_player:hover { border: 1px solid #039BCE;  cursor: default; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#03AFE9), to(#0280AB)); background-image: -moz-linear-gradient(0% 100% 90deg,#0280AB, #03AFE9); }
+.add_player.selected a, .add_player:hover a { color: #FFF; cursor: default; }
+.add_player a { color: #8A8A8A; text-decoration: none; }
+.add_score { font-size: 100px; font-family: Arial, Helvetica, sans-serif; line-height: 80px; font-weight: bold; color: #666; }
+.add_score_header { margin: 13px 0; }
+.add_slider { padding: 16px 27px 10px 10px; }
+/* =========================================
     BUTTONS
    ========================================= */
 .btn_blue { background: #00A9E0; border: 1px solid #0099CC; font-size: 13px; padding: 5px 14px 6px 14px; color: #FFF; font-weight: bold; text-decoration: none; cursor: pointer; }
@@ -31,12 +46,14 @@ td { vertical-align: top; }
 /* =========================================
     CORE
    ========================================= */
+.core_center { text-align: center; }
 .core_clear { clear: both; }
 .core_container { margin: 0 auto; text-align: left; min-width: 550px; height: 69px; padding: 25px 35px 25px 39px; }
 .core_error { color: #A91C07; font-style: italic; }
 .core_last { float: right; padding: 10px 4px 17px 0; text-align: center; width: 75px; margin: 3px 23px 0 0; color: #8DC754; text-shadow: 2px 2px 3px #1C1C1C; border-top: 2px solid #212121; border-left: 2px solid #212121; border-bottom: 1px solid #424242; border-right: 1px solid #424242; -moz-box-shadow: #1B1B1B 2px 2px 2px 0 inset; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#303030), to(#2B2B2B)); background-image: -moz-linear-gradient(0% 100% 90deg,#2B2B2B, #303030); }
 .core_left { float: left; }
 .core_loss { color: #CCC; }
+.core_message { background: #F3F5B4; color: #000; font-size: 13px; font-weight: bold; padding: 6px 14px 8px 14px; position: fixed; top: 0; z-index: 100000; }
 .core_radius { -moz-border-radius:1px; border-radius:1px; -webkit-border-radius:1px; }
 .core_radius3 { -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px; }
 .core_radius6 { -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; }
@@ -49,7 +66,7 @@ td { vertical-align: top; }
 .core_radius_top8 { -moz-border-radius-topleft:8px; -moz-border-radius-topright:8px; border-top-left-radius:8px; border-top-right-radius:8px; -webkit-border-radius-topleft:8px; -webkit-border-radius-topright:8px; -khtml-border-radius-topleft: 8px; -khtml-border-radius-topright: 8px; }
 .core_rankings_div { margin: 35px 0 35px 35px; }
 .core_right { float: right; }
-.core_shade { position: absolute; background: #282422; opacity: 0.9; -moz-opacity: 0.9; -khtml-opacity: 0.9; filter: alpha(opacity=90); width: 100%; height: 100%; top: 0; left: 0; z-index: 1000; }
+.core_shade { position: absolute; background: #101314; opacity: 0.9; -moz-opacity: 0.9; -khtml-opacity: 0.9; filter: alpha(opacity=90); width: 100%; height: 100%; top: 0; left: 0; z-index: 1000; }
 .core_the_rest { float: left; min-width: 300px; width: 100%; cursor: pointer; margin: 19px 35px 0 0; padding: 4px 13px 7px 13px; font-size: 26px; text-shadow: 2px 2px 3px #141414; color: #DDD; border-bottom: 3px solid #181818; border-right: 3px solid #181818; border-top: 3px solid #2D2D2D; border-left: 3px solid #2D2D2D; height: 59px; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#282828), to(#1B1B1B)); background-image: -moz-linear-gradient(0% 100% 90deg,#1B1B1B, #282828); -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; cu }
 .core_the_rest .core_last { margin-top: 7px; }
 .core_the_rest .name { float: left; margin: 23px 0 0 0; }
@@ -131,15 +148,18 @@ body#home .unlimited { background: url(images/home_icon_unlimited.jpg) no-repeat
    ========================================= */
 .popup { text-align: center; margin: 0 auto; position: absolute; padding-top: 50px; z-index: 1500; width: 505px; }
 .popup_crop { width: 696px !important; }
+.popup_dark { background: #EFEFEF !important; }
 .popup_domain { background: #E1E1E1; color: #555; padding: 2px 10px 3px 10px; margin: 0 0 0 -12px; border: 1px solid #AABABB; }
 .popup_body { background: url("images/popup_bg.jpg") #F1F0ED; padding: 23px; text-align: left; }
 .popup_close, .popup_close:hover { color: #FFF; font-size: 110%; line-height: 40px; margin-right: 5px; }
 .popup_container { background: #FFF; border: 1px solid #DFDCD9; padding: 23px; }
 .popup_container h3 { font-family: Georgia, "Times New Roman", Times, serif; font-size: 180%; font-weight: normal; }
-.popup_half { width: 48%; }
+.popup_half { background: #FFF; border: 1px solid #DFDCD9; padding: 13px 0 13px 15px; width: 47%; }
 .popup_header { height: 62px; background: url("images/popup_header_bg.jpg") repeat-x #6A625C; text-align: left; padding: 23px 23px 0 23px; }
+.popup_header img { margin-top: 7px; }
+.popup_light { background: #F7F7F7 !important; }
 .popup_links { line-height: 24px; margin-top: 23px; }
-.popup_large { width: 805px !important; }
+.popup_large { width: 895px !important; }
 .popup_med { width: 505px !important; }
 .popup_preview { background: #FFF; padding: 23px; width: 421px; }
 .popup_preview img { margin-top: 12px; }
