--- a/pingpong/media/core.css
+++ b/pingpong/media/core.css
@@ -10,6 +10,7 @@ a:hover { text-decoration: none; }
 th { font-style: inherit; font-weight: inherit; }
 fieldset, img { border: 0; }
 input { font-size: 105%; -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px }
+input.pads { padding: 3px 5px; margin: 0 10px 4px 0; -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px }
 input[type=text]:focus, input[type=password]:focus { outline: none; border: 2px solid #0099CC; }
 input.fat { padding: 3px 5px; margin: 0 10px 4px 0; -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px }
 input.med { width: 200px; }
@@ -46,6 +47,11 @@ td { vertical-align: top; }
 /* =========================================
     CORE
    ========================================= */
+.core_box_side { width: 300px; float: right; margin-top: 13px; }
+.core_box_side h3 { font-size: 20px; font-weight: normal; font-family: Georgia, "Times New Roman", Times, serif; letter-spacing: 1px; color: #444; }
+.core_box_side img { display: block; }
+.core_box_side li { list-style-type: square; margin-left: 16px; }
+.core_box_side p, .core_box_side ul { font-size: 95%; margin: 13px 0 23px 0; }
 .core_center { text-align: center; }
 .core_clear { clear: both; }
 .core_container { margin: 0 auto; text-align: left; min-width: 550px; height: 69px; padding: 25px 35px 25px 39px; }
@@ -96,6 +102,7 @@ td { vertical-align: top; }
 body#home { background: #2E2E2E; font-family: Helvetica, Arial, sans-serif; }
 body#home h1 { font-family: Georgia, "Times New Roman", Times, serif; font-size: 27px; margin-top: 8px; }
 body#home h2 { font-size: 16px; font-weight: bold; margin: 0; padding: 0; }
+body#home label { display: block; font-weight: bold; }
 body#home p { color: #ACACAC; font-size: 12px; line-height: 20px; }
 body#home .cancel { color: #ACACAC; display: block; margin: 13px 0 43px 0; font-size: 12px; font-family: Helvetica, Arial, sans-serif; }
 body#home .container { width: 812px; margin: 0 auto; padding: 43px 0; }
@@ -106,6 +113,7 @@ body#home .intro { font-size: 16px; }
 body#home .login { float: right; margin-top: -4px; }
 body#home .login .small { font-size: 13px; padding: 4px; width: 85px; margin-right: 3px; }
 body#home .logo { margin: 0 auto; width: 812px; padding: 35px 0; }
+body#home .popup li, body#home .popup p { color: #666; font-size: 12px; }
 body#home .signup { color: #888; margin: 0 0 8px 0; }
 body#home .signup_box { float: right; margin-top: 17px; }
 body#home .top { background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#3B3B3B), to(#141414)); background-image: -moz-linear-gradient(0% 100% 90deg,#141414, #3b3b3b); }
@@ -152,15 +160,17 @@ body#home .unlimited { background: url(images/home_icon_unlimited.jpg) no-repeat
 .popup_domain { background: #E1E1E1; color: #555; padding: 2px 10px 3px 10px; margin: 0 0 0 -12px; border: 1px solid #AABABB; }
 .popup_body { background: url("images/popup_bg.jpg") #F1F0ED; padding: 23px; text-align: left; }
 .popup_close, .popup_close:hover { color: #FFF; font-size: 110%; line-height: 40px; margin-right: 5px; }
-.popup_container { background: #FFF; border: 1px solid #DFDCD9; padding: 23px; }
+.popup_container { background: #FFF; border: 1px solid #DFDCD9; padding: 23px; color: #333; }
 .popup_container h3 { font-family: Georgia, "Times New Roman", Times, serif; font-size: 180%; font-weight: normal; }
 .popup_half { background: #FFF; border: 1px solid #DFDCD9; padding: 13px 0 13px 15px; width: 47%; }
+.popup_half_of { width: 48%; }
 .popup_header { height: 62px; background: url("images/popup_header_bg.jpg") repeat-x #6A625C; text-align: left; padding: 23px 23px 0 23px; }
 .popup_header img { margin-top: 7px; }
 .popup_light { background: #F7F7F7 !important; }
 .popup_links { line-height: 24px; margin-top: 23px; }
 .popup_large { width: 895px !important; }
 .popup_med { width: 505px !important; }
+.popup_medlrg { width: 805px !important; }
 .popup_preview { background: #FFF; padding: 23px; width: 421px; }
 .popup_preview img { margin-top: 12px; }
 .popup_preview .popup_close { color: #006699; line-height: 14px; font-size: 140%; margin-bottom: 30px; }
