--- a/pingpong/templates/signup.html
+++ b/pingpong/templates/signup.html
@@ -1,7 +1,7 @@
 	<div id="popup_signup" class="popup popup_medlrg core_radius_top6">
 		<div class="popup_header core_radius_top6">
 			<span class="core_right"><a href="" onClick="hideShade(); return false;" class="popup_close"><strong>close</strong></a></span>
-			<img src="images/header_request_an_invite.gif" width="201" height="22" />
+			<img src="{{ MEDIA_URL }}pingpong/images/header_request_an_invite.gif" width="201" height="22" />
 		</div>
 		<div class="popup_body core_radius_bottom6">
 			<div class="popup_container popup_half_of core_radius6 core_left">
