--- a/pingpong/templates/signup.html
+++ b/pingpong/templates/signup.html
@@ -17,10 +17,11 @@
 					<input type="text" name="cm-name" id="name" class="pads" />
 					<div class="mb_extra"></div>
 					<label for="hutrdy-hutrdy">What's your email address?</label>
-					<input type="text" name="hutrdy-hutrdy" id="hutrdy-hutrdy"  class="pads med" />
+					<input type="text" name="cm-hutrdy-hutrdy" id="hutrdy-hutrdy"  class="pads med" />
 					<div class="mb_extra"></div>
 					<p><input type="submit" class="btn_blue core_radius3" value="I'd like an invite" /></p>
 				</form>
+
 			</div>
 			<div class="core_box_side">
 				<h3>What is Ping Pong App?</h3>
