--- a/pingpong/templates/freetrial.html
+++ b/pingpong/templates/freetrial.html
@@ -36,7 +36,7 @@
 					<div class="mb"></div>
 
 					<label for="email">Enter your email address</label>
-					<input type="password" name="email" id="email" class="core_left pads med" />
+					<input type="text" name="email" id="email" class="core_left pads med" />
 					<div id="email_error" class="core_mb_extra core_error"><!-- Populate if error --></div>
 					<div class="core_clear"></div>
 					<div class="mb"></div>
