--- a/pingpong/templates/main.html
+++ b/pingpong/templates/main.html
@@ -4,7 +4,7 @@
   <div id="message" class="core_message core_radius_bottom6" style="display: none;">Loading...</div>
   <div id="popup_container"></div>
 
-	<!-- // NAV ////////////////////////////////////////////// -->
+	<!-- // Nav ////////////////////////////////////////////// -->
 	<div class="nav">
 		<div class="core_container">
 			<span class="core_right"><a href="" onclick="showPopup('add', '/score/add', ''); return false;" class="nav_add core_radius8">Add score<span></span></a></span>
@@ -13,40 +13,36 @@
 			<div class="core_clear"></div>
 		</div>
 	</div>
-	
-	<!-- // SINGLES RANKINGS ///////////////////////////////// -->
+
+	{% if players %}
+	<!-- // Singles rankings -->
 	<div id="singles" class="core_rankings_div core_radius8">
 		<ul class="core_top_three core_radius8">
-			<li class="top_players core_radius8"><span class="points">156</span><span class="rank core_radius8">1</span><span class="name">Dmart</span><div class="core_clear"></div></li>
-			<li class="top_players core_radius8"><span class="points">142</span><div class="core_last core_radius8">+3</div><span class="rank core_radius8">2</span><span class="name">James</span><div class="core_clear"></div></li>
-			<li class="top_players core_radius8"><span class="points">139</span><div class="core_last core_loss core_radius8">-3</div><span class="rank core_radius8">3</span><span class="name">Phil</span><div class="core_clear"></div></li>
+		  {% for p in players|slice:"0:3" %}
+			<li class="top_players core_radius8"><span class="points">{{ p.ranking_points }}</span>{% ifnotequal p.display_last_movement '' %}<div class="core_last {% if p.lost_last %}core_loss{% endif %} core_radius8">{{ p.display_last_movement }}</div>{% endifnotequal %}<span class="rank core_radius8">{{ forloop.counter }}</span><span class="name">{{ p.name }}</span><div class="core_clear"></div></li>
+			{% endfor %}
 		</ul>
-		<div class="core_the_rest"><span class="points">131</span><div class="rank">4.</div><span class="name">DavidG</span><div class="core_clear"></div></div>
-		<div class="core_the_rest"><span class="points">129</span><div class="core_last core_loss core_radius8">-3</div><div class="rank">5.</div><span class="name">Mat</span><div class="core_clear"></div></div>
-		<div class="core_the_rest"><span class="points">113</span><div class="rank">6.</div><span class="name">Jason</span><div class="core_clear"></div></div>
-		<div class="core_the_rest"><span class="points">106</span><div class="core_last core_radius8">+3</div><div class="rank">7.</div><span class="name">Ben</span><div class="core_clear"></div></div>
-		<div class="core_the_rest"><span class="points">101</span><div class="rank">8.</div><span class="name">Ken</span><div class="core_clear"></div></div>
-		<div class="core_the_rest"><span class="points">98</span><div class="rank">9.</div><span class="name">DavidH</span><div class="core_clear"></div></div>
+		{% for p in players|slice:"3:10000" %}
+		<div class="core_the_rest"><span class="points">{{ p.ranking_points }}</span>{% ifnotequal p.display_last_movement '' %}<div class="core_last {% if p.lost_last %}core_loss{% endif %} core_radius8">{{ p.display_last_movement }}</div>{% endifnotequal %}<div class="rank">{{ forloop.counter|add:"3" }}.</div><span class="name">{{ p.name }}</span><div class="core_clear"></div></div>
+		{% endfor %}
 		<div class="core_clear"></div>
 	</div>
-	
-	<!-- // DOUBLES RANKINGS ///////////////////////////////// -->
-	<div id="doubles" class="core_rankings_div core_radius8" style="display: none;">
+
+	<!-- // Doubles rankings - just the same as singles for now -->
+	<div id="doubles" class="core_rankings_div core_radius8" style="display: none">
 		<ul class="core_top_three core_radius8">
-			<li class="top_players core_radius8"><span class="points">156</span><div class="core_last core_radius8">+5</div><span class="rank core_radius8">1</span><span class="name">James</span><div class="core_clear"></div></li>
-			<li class="top_players core_radius8"><span class="points">142</span><span class="rank core_radius8">2</span><span class="name">DaveM</span><div class="core_clear"></div></li>
-			<li class="top_players core_radius8"><span class="points">139</span><span class="rank core_radius8">3</span><span class="name">Phil</span><div class="core_clear"></div></li>
+		  {% for p in players|slice:"0:3" %}
+			<li class="top_players core_radius8"><span class="points">{{ p.ranking_points }}</span>{% ifnotequal p.display_last_movement '' %}<div class="core_last {% if p.lost_last %}core_loss{% endif %} core_radius8">{{ p.display_last_movement }}</div>{% endifnotequal %}<span class="rank core_radius8">{{ forloop.counter }}</span><span class="name">{{ p.name }}</span><div class="core_clear"></div></li>
+			{% endfor %}
 		</ul>
-		<div class="core_the_rest"><span class="points">131</span><div class="core_last core_radius8">+5</div><div class="rank">4.</div><span class="name">DavidG</span><div class="core_clear"></div></div>
-		<div class="core_the_rest"><span class="points">129</span><div class="rank">5.</div><span class="name">Mat</span><div class="core_clear"></div></div>
-		<div class="core_the_rest"><span class="points">113</span><div class="core_last core_loss core_radius8">-5</div><div class="rank">6.</div><span class="name">Jason</span><div class="core_clear"></div></div>
-		<div class="core_the_rest"><span class="points">106</span><div class="core_last core_loss core_radius8">-5</div><div class="rank">7.</div><span class="name">Ben</span><div class="core_clear"></div></div>
-		<div class="core_the_rest"><span class="points">101</span><div class="rank">8.</div><span class="name">Ken</span><div class="core_clear"></div></div>
-		<div class="core_the_rest"><span class="points">98</span><div class="rank">9.</div><span class="name">DavidH</span><div class="core_clear"></div></div>
+		{% for p in players|slice:"3:10000" %}
+		<div class="core_the_rest"><span class="points">{{ p.ranking_points }}</span>{% ifnotequal p.display_last_movement '' %}<div class="core_last {% if p.lost_last %}core_loss{% endif %} core_radius8">{{ p.display_last_movement }}</div>{% endifnotequal %}<div class="rank">{{ forloop.counter|add:"3" }}.</div><span class="name">{{ p.name }}</span><div class="core_clear"></div></div>
+		{% endfor %}
 		<div class="core_clear"></div>
 	</div>
+	{% endif %}
 	
-	<!-- // FOOTER ///////////////////////////////// -->
+	<!-- // Footer ///////////////////////////////// -->
 	<div class="footer">
 		<div class="links">
 			<a href="#" onclick="showPopup('settings', '/settings', ''); return false;">Settings</a> <a href="{% url django.contrib.auth.views.logout %}">Logout</a> 
