Catered for empty players collection in main template.

--- a/pingpong/media/core.css
+++ b/pingpong/media/core.css
@@ -92,6 +92,7 @@ td { vertical-align: top; }
 .core_top_three li:nth-child(2) { border-bottom: 1px solid #373737; text-shadow: 2px 2px 3px #1A1A1A; padding: 0 20px 22px 20px; }
 .core_top_three li:nth-child(3) { padding: 10px 20px 0 20px; text-shadow: 2px 2px 3px #0C0C0C; margin: 0; }
 .core_vline { border-right: 1px solid #DDD; margin: 0 7px 0 5px; width: 1px; display: inline; }
+h1#core_message { font-size: 33px; margin: 39px; }
 /* =========================================
     FOOTER
    ========================================= */
