Index changes to cater for doubles scoring.

--- a/pingpong/templates/player_detail.html
+++ b/pingpong/templates/player_detail.html
@@ -9,6 +9,7 @@
 
 <ul>
   <li>Name: {{ object.name }}</li>
-  <li>Ranking points: {{ object.ranking_points }}</li>
+  <li>Singles ranking points: {{ object.singles_ranking_points }}</li>
+  <li>Doubles ranking points: {{ object.doubles_ranking_points }}</li>
 </ul>
 {% endblock %}
