--- a/pingpong/templates/player_list.html
+++ b/pingpong/templates/player_list.html
@@ -8,7 +8,7 @@
 <ul>
   {% for player in object_list %}
     <li>
-      <a href="{% url pingpong.views.show_player key=player.key %}">{{ player.name }} ({{ player.ranking_points }} points)</a>
+      <a href="{% url pingpong.views.show_player key=player.key %}">{{ player.name }}</a>
       <a href="{% url pingpong.views.edit_player key=player.key %}">Edit</a>
       <a href="{% url pingpong.views.delete_player key=player.key %}">Delete</a>
     </li>
