Added the ability re-direct to either singles or doubles mode on the main page.

--- a/pingpong/templates/main.html
+++ b/pingpong/templates/main.html
@@ -55,5 +55,15 @@
 	</div>
   <script type="text/javascript">
     var baseUrl = "";
+    $(document).ready(function() {
+      mode = getParameterByName('m');
+      if (mode === 'doubles') {
+      	$(".nav_doubles").removeClass("nav_up").addClass("nav_down");
+      	$(".nav_singles").removeClass("nav_down").addClass("nav_up");
+      	$("#singles").hide();
+      	$("#doubles").fadeIn("slow");
+      	return false;
+      }
+    });
   </script>
 {% endblock %}
