Just updated the player_detail template to contain new properties.

--- a/pingpong/templates/player_detail.html
+++ b/pingpong/templates/player_detail.html
@@ -9,6 +9,9 @@
 
 <ul>
   <li>Name: {{ object.name }}</li>
+  <li>Games played: {{ object.games_played }}</li>
+  <li>Wins: {{ object.games_won }}</li>
+  <li>Losses: {{ object.games_lost }}</li>
   <li>Singles ranking points: {{ object.singles_ranking_points }}</li>
   <li>Doubles ranking points: {{ object.doubles_ranking_points }}</li>
 </ul>
