Added support for specifically tracking singles and doubles games won/lost per player.

--- a/pingpong/templates/player_detail.html
+++ b/pingpong/templates/player_detail.html
@@ -9,10 +9,13 @@
 
 <ul>
   <li>Name: {{ object.name }}</li>
-  <li>Games played: {{ object.games_played }}</li>
-  <li>Wins: {{ object.games_won }}</li>
-  <li>Losses: {{ object.games_lost }}</li>
+  <li>Singles games played: {{ object.singles_games_played }}</li>
+  <li>Singles Wins: {{ object.singles_games_won }}</li>
+  <li>Singles Losses: {{ object.singles_games_lost }}</li>
   <li>Singles ranking points: {{ object.singles_ranking_points }}</li>
+  <li>Doubles games played: {{ object.doubles_games_played }}</li>
+  <li>Doubles Wins: {{ object.doubles_games_won }}</li>
+  <li>Doubles Losses: {{ object.doubles_games_lost }}</li>
   <li>Doubles ranking points: {{ object.doubles_ranking_points }}</li>
 </ul>
 {% endblock %}
