Added email to settings popup.

--- a/pingpong/templates/settings.html
+++ b/pingpong/templates/settings.html
@@ -39,7 +39,7 @@
 				<div class="mb_extra"></div>
 				
 				<label for="email">Email address</label><br />
-				<input type="text" name="email" id="email" class="core_left pads med" />
+				<input type="text" name="email" id="email" class="core_left pads med" value="{{ email }}" />
 				<div id="email_error" class="core_mb_extra core_error"><!-- Populate if error --></div>
 				<div class="core_clear"></div>
 				<div class="mb"></div>
