Implemented player deletion (de-activation).

--- a/pingpong/templates/main.html
+++ b/pingpong/templates/main.html
@@ -51,7 +51,7 @@
 		<div class="links">
 			<a href="#" onclick="showPopup('settings', '/settings', ''); return false;">Settings</a> <a href="{% url django.contrib.auth.views.logout %}">Logout</a> 
 		</div>
-		<a href=""><img src="{{ MEDIA_URL }}pingpong/images/footer_logo.gif" width="198" height="44" alt="PingPongApp.com" /></a>
+		<a href=""><img src="{{ MEDIA_URL }}pingpong/images/footer_logo.gif" width="198" height="44" alt="PingPongNinja.com" /></a>
 	</div>
   <script type="text/javascript">
     var baseUrl = "";
