--- a/pingpong/templates/signup.html
+++ b/pingpong/templates/signup.html
@@ -9,7 +9,7 @@
 				<h3>Signup to receive an invite,</h3>
 				<div class="mb_extra"></div>
 				
-				<p>Signing up for PingPongApp is by invite only for the time-being.  Don't worry, we'll be adding new accounts shortly.  Add your email below and we'll notify you when we are ready.</p> 
+				<p>Signing up for PingPongNinja is by invite only for the time-being.  Don't worry, we'll be adding new accounts shortly.  Add your email below and we'll notify you when we are ready.</p> 
 				<div class="mb_extra"></div>
 				
 				<form action="http://pingpongapp.createsend.com/t/r/s/hutrdy/" method="post">
