--- a/pingpong/templates/base.html
+++ b/pingpong/templates/base.html
@@ -2,7 +2,7 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>{% block title %}{% endblock %}PingPongApp</title>
+  <title>{% block title %}{% endblock %}PingPongNinja</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
   {% block css %}
