--- a/pingpong/templates/settings.html
+++ b/pingpong/templates/settings.html
@@ -30,7 +30,7 @@
 							<div id="{{ p.key }}_name">{{ p.name }}</div>
 							<div id="{{ p.key }}_input" style="display: none;"><input type="text" id="{{ p.key }}" value="{{ p.name }}" class="pads" style="margin-bottom: 0;" /></div>
 						</td>
-						<td class='right'><a href='' id="{{ p.key }}_edit" onclick="settingsEdit('{{ p.key }}'); return false;">edit</a> <div class="core_vline"></div> <a href='' onclick="settingsDelete('{{ p.name }}', '{{ p.key }}'); return false;">delete</a></td>
+						<td class='right'><a href='' id="{{ p.key }}_edit" onclick="settingsEdit('{{ p.key }}'); return false;">edit</a> <div class="core_vline"></div> <a href="" onclick="deletePlayer('{{ p.name }}', '{{ p.key }}'); return false;">delete</a></td>
 					</tr>
 					{% endfor %}
 				</table>
